# lambda-mock

./: .gitignore  CLAUDE.md  READMD.md  package.json  pyproject.toml  sst-env.d.ts  sst.config.ts
backend/server/: .env.example  main.py  pyproject.toml
backend/server/alembic/: env.py
backend/server/alembic/versions/: 057cf083fad6_add_simulation_results_table.py
backend/server/database/: __init__.py  config.py  connection.py
backend/shared/: pyproject.toml
backend/shared/core/: config_loader.py  summary_generator.py
backend/shared/models/: admin.py  calc_results.py  calc_vars.py  computex_calc_vars_and_results.py  evaluate_vars_and_results.py  generated_models.py  salesperson.py
backend/shared/schemas/: base_model.py
backend/shared/utils/: lambda_response.py
dev-tools/: pg-pull.sh
shared/: pyproject.toml
shared/core/: calculator.py  config_loader.py  summary_generator.py
shared/models/: __init__.py  admin.py  customer.py  generated_models.py  users.py
shared/schemas/: base_model.py
shared/utils/: lambda_response.py
v1_lambda_ess_irr_evaluation/: Dockerfile  bbb_requirements.txt  pyproject.toml  requirements.txt
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/: api.py  shared
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/database/: connection.py
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/schemas/: ess_evaluation_req.py
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/shared/: pyproject.toml
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/shared/core/: calculator.py  config_loader.py  summary_generator.py
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/shared/models/: __init__.py
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/shared/utils/: lambda_response.py
v1_lambda_ess_irr_evaluation/src/v1_lambda_ess_irr_evaluation/utils/: logger.py  tools.py
v1_lambda_run_simulation/: Dockerfile  pyproject.toml
v1_lambda_run_simulation/src/v1_lambda_run_simulation/: api.py
v1_lambda_run_simulation/src/v1_lambda_run_simulation/schemas/: run_simulation_req.py
v1_lambda_run_simulation/src/v1_lambda_run_simulation/utils/: logger.py
v1_lambda_single_simulation/: pyproject.toml
v1_lambda_single_simulation/src/v1_lambda_single_simulation/: api.py
v1_lambda_single_simulation/src/v1_lambda_single_simulation/schemas/: single_simulation_req.py
v1_lambda_single_simulation/src/v1_lambda_single_simulation/utils/: logger.py
